my-library/K8S/test-app/test-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test-app-svc
spec:
  type: NodePort
  selector:
    app: test-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30009
